cabal-version:      2.4
name:               message-repo
version:            0.1.0.0
Build-type:         Simple

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Momentum93
maintainer:         thomas-meyer@online.de

-- A copyright notice.
-- copyright:
-- category:

Library

  build-depends:      base ^>=4.14.3.0
                    , binary
  exposed-modules:  
          Message.Message
